Debug in LogSupport.java.